--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -67,7 +67,7 @@
 }
 
 .card{
-    width: 50%;
+    width: 33.33%;
     z-index: 1000;
 }
 
@@ -88,6 +88,7 @@
     width: 100%;
     text-align: center;
     visibility: hidden;
+    cursor: pointer;
 }
 
 
